Step1 Empty project

--- a/package.json
+++ b/package.json
@@ -21,10 +21,5 @@
     "url": "https://github.com/ranyelhousieny/new-react-app/issues"
   },
   "homepage": "https://github.com/ranyelhousieny/new-react-app#readme",
-  "dependencies": {
-    "html-webpack-plugin": "^5.3.2",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
-  }
+  "dependencies": {}
 }
